plugins {
	id 'java'
	id 'application'
}

sourceSets {
	main {
		java {
			srcDir 'src'
		}
	}
}

configurations {
	hsqldb
}

dependencies {
	hsqldb 'org.hsqldb:hsqldb:2.6.0'
	implementation configurations.hsqldb.dependencies
}

java {
	sourceCompatibility JavaVersion.VERSION_16
}

compileJava {
	options.compilerArgs.add('--enable-preview')
}

application {
	mainModule.set('ritzow.notes.server')
	mainClass.set('ritzow.notes.server.RunServer')
}

run {
	doLast {
		workingDir project.file('server')
	}

	jvmArgs.add('--enable-preview')
}

task databaseManager(type: JavaExec) {
	group 'application'
	classpath configurations.hsqldb.asPath
	mainClass.set('org.hsqldb.util.DatabaseManagerSwing')
}